--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -59,7 +59,10 @@
                <li>Два режими налаштування яскравості</li>
                <li>Можливість встановлення таймера</li>
             </ul>
-            <a href="https://svet.skripz.com.ua/#order_form" class="button">Замовити зі знижкою</a>
+            <button class="button">
+               <div class="button-hover"></div>
+               <span> Замовити зі знижкою</span>
+            </button>
             <div class="products_count">Другий набір за<span class="lastpack">249 грн</span></div>
          </header>
          <section class="dark_theme s2">
@@ -111,7 +114,10 @@
                   </b>
                </p>
             </div>
-            <a href="https://svet.skripz.com.ua/#order_form" class="button">Замовити зараз</a>
+            <button class="button">
+               <div class="button-hover"></div>
+               <span> Замовити зараз</span>
+            </button>
             <div class="products_count">Залишилося <span class="lastpack">7</span> штук по акції</div>
             <img src="./styles/s4.webp" alt="" />
          </section>
@@ -139,7 +145,10 @@
                <img src="./styles/9.jpg" alt="" />
             </div>
             <br />
-            <a href="https://svet.skripz.com.ua/#order_form" class="button">Замовити зі знижкою</a>
+            <button class="button">
+               <div class="button-hover"></div>
+               <span> Замовити зі знижкою</span>
+            </button>
             <div class="products_count">Залишилося <span class="lastpack">7</span> штук по акції</div>
          </section>
 
@@ -180,7 +189,10 @@
                   </div>
                </div>
             </div>
-            <a href="https://svet.skripz.com.ua/#order_form" class="button">Замовити зараз</a>
+            <button class="button">
+               <div class="button-hover"></div>
+               <span> Замовити зараз</span>
+            </button>
             <div class="products_count">Залишилося <span class="lastpack">7</span>штук по акції</div>
          </section>
          <section class="order_info2_section">
@@ -244,10 +256,7 @@
                </p>
             </div>
             <p class="limited">Залиште заявку та наш менеджер зателефонує Вам для уточнення деталей замовлення</p>
-            <form
-               id="order_form"
-               class="order_form"
-               >
+            <form id="order_form" class="order_form">
                <!-- action="https://svet.skripz.com.ua/zakaz.php" -->
                <!-- method="post" -->
                <!-- onsubmit="if(!this.name.value){alert(&#39;Введіть ваше ім\&#39;я!&#39;);return false}if(!this.phone.value){alert(&#39;Введіть Ваш номер телефону!&#39;);return false}return true;" -->
@@ -255,12 +264,16 @@
 
                <input class="field" type="text" name="name" placeholder="Введіть ваше ім&#39;я" required="" />
                <input class="field" type="text" name="phone" id="phone" placeholder="Введіть Ваш телефон" required="" />
-               <button class="button" type="submit"><p>Оформити замовлення</p></button>
+
+               <button class="button">
+                  <div class="button-hover"></div>
+                  <span>Оформити замовлення</span>
+               </button>
             </form>
-            <div class="products_count">Другий набір за<span class="lastpack">249 грн</span></div>
+            <!-- <div class="products_count">Другий набір за<span class="lastpack">249 грн</span></div> -->
          </section>
          <footer class="footer_section">
-            <div style="text-align: center">
+            <!-- <div style="text-align: center">
                <footer class="footer_section">
                   <footer class="footer_section">
                      <p>ФОП Литвинов Сергій Володимирович</p>
@@ -273,7 +286,7 @@
                      <a href="http://skripz.com.ua/guarantee" target="_blank">Умови гарантії та повернення</a>
                   </footer>
                </footer>
-            </div>
+            </div> -->
          </footer>
       </div>
       <!-- scripts -->
