add navigation button

--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -16,7 +16,8 @@
       <link rel="stylesheet" type="text/css" href="./styles/style.css" />
    </head>
    <body>
-      <div class="main_wrapper">
+      <div id="top" class="main_wrapper">
+         <a href="#top" class="top-btn" title="вгору">↑</a>
          <header class="offer_section offer3">
             <div class="title_block">
                <h1 class="main_title">Набір із трьох LED світильників</h1>
@@ -59,10 +60,10 @@
                <li>Два режими налаштування яскравості</li>
                <li>Можливість встановлення таймера</li>
             </ul>
-            <button class="button">
+            <a href="index.html#form" class="button">
                <div class="button-hover"></div>
                <span> Замовити зі знижкою</span>
-            </button>
+            </a>
             <div class="products_count">Другий набір за<span class="lastpack">249 грн</span></div>
          </header>
          <section class="dark_theme s2">
@@ -256,7 +257,7 @@
                </p>
             </div>
             <p class="limited">Залиште заявку та наш менеджер зателефонує Вам для уточнення деталей замовлення</p>
-            <form id="order_form" class="order_form">
+            <form id="form" class="order_form">
                <!-- action="https://svet.skripz.com.ua/zakaz.php" -->
                <!-- method="post" -->
                <!-- onsubmit="if(!this.name.value){alert(&#39;Введіть ваше ім\&#39;я!&#39;);return false}if(!this.phone.value){alert(&#39;Введіть Ваш номер телефону!&#39;);return false}return true;" -->
