fixed href buttons

--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -115,10 +115,10 @@
                   </b>
                </p>
             </div>
-            <button class="button">
+            <a href="index.html#form" class="button">
                <div class="button-hover"></div>
                <span> Замовити зараз</span>
-            </button>
+            </a>
             <div class="products_count">Залишилося <span class="lastpack">7</span> штук по акції</div>
             <img src="./styles/s4.webp" alt="" />
          </section>
@@ -146,10 +146,10 @@
                <img src="./styles/9.jpg" alt="" />
             </div>
             <br />
-            <button class="button">
+            <a href="index.html#form" class="button">
                <div class="button-hover"></div>
                <span> Замовити зі знижкою</span>
-            </button>
+            </a>
             <div class="products_count">Залишилося <span class="lastpack">7</span> штук по акції</div>
          </section>
 
@@ -190,10 +190,10 @@
                   </div>
                </div>
             </div>
-            <button class="button">
+            <a href="index.html#form" class="button">
                <div class="button-hover"></div>
                <span> Замовити зараз</span>
-            </button>
+            </a>
             <div class="products_count">Залишилося <span class="lastpack">7</span>штук по акції</div>
          </section>
          <section class="order_info2_section">
