add black-out section

--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -19,6 +19,11 @@
       <div id="top" class="main_wrapper">
          <a href="#top" class="top-btn" title="вгору">↑</a>
          <header class="offer_section offer3">
+            <div class="title_block black">
+               <h2 class="main_title">Black Out</h2>
+               <p class="subtitle">готуємося до Black Out і сподіваємося що його не буде</p>
+            </div>
+
             <div class="title_block">
                <h1 class="main_title">Набір із трьох LED світильників</h1>
                <p class="subtitle">З пультом, на батарейках</p>
