--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -7,9 +7,16 @@
       <!-- End Meta Pixel Code -->
 
       <meta name="viewport" content="width=device-width" />
-      <title>Набір LED лампи з пультом дистанційного керування</title>
+      <title>Набір світильників LED з пультом керування</title>
 
-      <link rel="shortcut icon" href="https://svet.skripz.com.ua/content/favicon.ico" type="image/x-icon" />
+      <!-- <link rel="shortcut icon" href="https://svet.skripz.com.ua/content/favicon.ico" type="image/x-icon" /> -->
+
+      <link
+         rel="shortcut icon"
+         href="./images/svg-light-3.svg"
+         type="image/x-icon"
+      />
+
       <link rel="stylesheet" href="./styles/reset.css" />
       <link rel="stylesheet" href="./styles/AvenirNextCyr.css" />
       <link rel="stylesheet" href="./styles/styles.css" />
