moderate images && css benefits section

--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -9,11 +9,7 @@
       <meta name="viewport" content="width=device-width" />
       <title>Набір світильників LED з пультом керування</title>
 
-      <link
-         rel="shortcut icon"
-         href="./images/svg-light-3.svg"
-         type="image/x-icon"
-      />
+      <link rel="shortcut icon" href="./images/svg-light-3.svg" type="image/x-icon" />
 
       <link rel="stylesheet" href="./styles/reset.css" />
       <link rel="stylesheet" href="./styles/AvenirNextCyr.css" />
@@ -35,7 +31,8 @@
             </div>
 
             <div class="image_block">
-               <img class="offer_image" src="./styles/offer__image.webp" alt="" />
+               <img class="offer_image" src="./images/07-1.jpg" alt="" />
+               <!-- <img class="offer_image" src="./styles/offer__image.webp" alt="" /> -->
                <div class="discount_block">
                   <div class="value">30%</div>
                   <div class="text">знижка</div>
@@ -82,13 +79,16 @@
                <div class="benefit_item">
                   <h2>ВСТАНОВЛЕННЯ ТАЙМЕРУ ТА НАЛАШТУВАННЯ ЯСКРАВОСТІ ЗА ДОПОМОГОЮ ПУЛЬТА</h2>
 
-                  <img src="./styles/s1.webp" alt="" />
+                  <img src="./images/lights-1.jpg" alt="" />
+                  <!-- <img src="./styles/s1.webp" alt="" /> -->
+
                   <p>Він оснащений дистанційним керуванням, регулятором яскравості та 30-хвилинним таймером.</p>
                </div>
                <div class="benefit_item">
                   <h2>УЛЬТРА ЯСКРАВІ ЛАМПИ ЯКІ ПРАЦЮЮТЬ ВІД БАТАРЕЙОК</h2>
 
-                  <img src="./styles/s2.webp" alt="" />
+                  <img class="offer_image" src="./images/04.webp" alt="" />
+                  <!-- <img src="./styles/s2.webp" alt="" /> -->
                   <p>
                      Живлення яким здійснюється за рахунок батарей ААА. Ви зможете включати його незалежно від електрики
                      міської мереж
@@ -97,7 +97,8 @@
                <div class="benefit_item">
                   <h2>ПІДХОДИТЬ ДЛЯ ОСВІТЛЕННЯ БУДЬ ЧОГО</h2>
 
-                  <img src="./styles/s3.webp" alt="" />
+                  <img src="./images/coulage-1.jpg" alt="" />
+                  <!-- <img src="./styles/s3.webp" alt="" /> -->
                   <p>
                      Такий світильник, ви зможете встановити куди завгодно( шаф, кухонної стільниці, гараж, підвал,
                      комори, сходів та ін.), і Вам зовсім не потрібно буде свердлити стіни – фіксація відбувається за
@@ -110,7 +111,8 @@
             <h2 class="title"><span>Подивіться як це просто</span></h2>
             <div class="video_block">
                <div class="youtube" id="YTLWfE-k_Fc">
-                  <img src="./styles/hqdefault.jpg" class="thumb" />
+                  <!-- <img src="./images/lights-2.jpg" class="thumb" /> -->
+                  <!-- <img src="./styles/hqdefault.jpg" class="thumb" /> -->
                   <div class="play"></div>
                </div>
             </div>
@@ -130,21 +132,53 @@
                <span> Замовити зараз</span>
             </a>
             <div class="products_count">Залишилося <span class="lastpack">7</span> штук по акції</div>
-            <img src="./styles/s4.webp" alt="" />
+            <img src="./images/lights-2.jpg" class="thumb" />
+            <!-- <img src="./styles/s4.webp" alt="" /> -->
          </section>
          <section class="s4">
             <h2 class="title">ХАРАКТЕРИСТИКИ</h2>
             <div class="benefits_list3">
                <div class="benefit_item">
-                  <img src="./styles/s5.webp" alt="" />
+                  <img src="./images/dimensions-4.jpg" alt="" />
+                  <!-- <img src="./styles/s5.webp" alt="" /> -->
                   <div class="text_block">
                      <ul>
-                        <li><strong>Яскравість:</strong>Висока – 30LM, низька – 10LM</li>
-                        <li><strong>Колір світла:</strong>Білий</li>
-                        <li><strong>Живлення 1 лампи: </strong>3 батареї AAA (у комплект не входять)</li>
-                        <li><strong>Живлення пульта:</strong>2 батареї AAA (у комплект не входять)</li>
-                        <li><strong>Розмір лампи:</strong> 9 x 9 x 2 см</li>
-                        <li><strong>Розмір пульта:</strong>8 x 6 см</li>
+                        <li><strong>Яскравість: </strong>Висока – 30LM, низька – 10LM</li>
+                        <li><strong>Колір світла: </strong>Білий</li>
+                        <li><strong>Розмір лампи: </strong>9 x 9 x 2 см</li>
+                        <li><strong>Живлення 1 лампи: </strong>3 батареї AAA </li>
+                        <!-- <li><strong>Живлення пульта: </strong>2 батареї AAA (у комплект не входять)</li> -->
+                        <!-- <li><strong>Розмір пульта: </strong>8 x 6 см</li> -->
+                     </ul>
+                  </div>
+               </div>
+
+               <div class="benefit_item">
+                  <img src="./images/dimensions-3.jpg" alt="" />
+                  <!-- <img src="./styles/s5.webp" alt="" /> -->
+                  <div class="text_block">
+                     <ul>
+                        <!-- <li><strong>Яскравість: </strong>Висока – 30LM, низька – 10LM</li> -->
+                        <!-- <li><strong>Колір світла: </strong>Білий</li> -->
+                        <!-- <li><strong>Живлення 1 лампи: </strong>3 батареї AAA (у комплект не входять)</li> -->
+                        <li><strong>Живлення пульта: </strong>2 батареї AAA</li>
+                        <li><strong>Розмір пульта: </strong>8 x 6 см</li>
+                        <!-- <li><strong>Розмір лампи: </strong>9 x 9 x 2 см</li> -->
+                     </ul>
+                  </div>
+               </div>
+
+               <div class="benefit_item">
+                  <img src="./images/13-1.jpg" alt="" />
+                  <!-- <img src="./styles/s5.webp" alt="" /> -->
+                  <div class="text_block">
+                     <ul>
+                        <li><strong>Комплектація: </strong></li>
+                        <li>LED-світильники - 3шт</li>
+                        <li>Пульт керування - 1шт</li>
+                        <li>(батареї AAA - <strong>не входять у комплект </strong>)</li>
+                        <!-- <li><strong>Розмір лампи: </strong>9 x 9 x 2 см</li> -->
+                        <!-- <li><strong>Розмір пульта: </strong>8 x 6 см</li> -->
                      </ul>
                   </div>
                </div>
@@ -172,6 +206,7 @@
             <div class="reviews_list4">
                <div class="review_item">
                   <img style="width: 180px" class="photo" src="./styles/1.jpg" alt="" />
+
                   <div class="text_block">
                      <div class="author_info">Дмитро, 43 роки, Київ</div>
                      <p>
