moderate images all

--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0027)https://svet.skripz.com.ua/ -->
 <html lang="uk-UA">
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -31,8 +30,7 @@
             </div>
 
             <div class="image_block">
-               <img class="offer_image" src="./images/07-1.jpg" alt="" />
-               <!-- <img class="offer_image" src="./styles/offer__image.webp" alt="" /> -->
+               <img class="offer_image" src="./images/lights-3-1.jpg" alt="" />
                <div class="discount_block">
                   <div class="value">30%</div>
                   <div class="text">знижка</div>
@@ -80,15 +78,11 @@
                   <h2>ВСТАНОВЛЕННЯ ТАЙМЕРУ ТА НАЛАШТУВАННЯ ЯСКРАВОСТІ ЗА ДОПОМОГОЮ ПУЛЬТА</h2>
 
                   <img src="./images/lights-1.jpg" alt="" />
-                  <!-- <img src="./styles/s1.webp" alt="" /> -->
-
                   <p>Він оснащений дистанційним керуванням, регулятором яскравості та 30-хвилинним таймером.</p>
                </div>
                <div class="benefit_item">
                   <h2>УЛЬТРА ЯСКРАВІ ЛАМПИ ЯКІ ПРАЦЮЮТЬ ВІД БАТАРЕЙОК</h2>
-
                   <img class="offer_image" src="./images/04.webp" alt="" />
-                  <!-- <img src="./styles/s2.webp" alt="" /> -->
                   <p>
                      Живлення яким здійснюється за рахунок батарей ААА. Ви зможете включати його незалежно від електрики
                      міської мереж
@@ -96,9 +90,7 @@
                </div>
                <div class="benefit_item">
                   <h2>ПІДХОДИТЬ ДЛЯ ОСВІТЛЕННЯ БУДЬ ЧОГО</h2>
-
                   <img src="./images/coulage-1.jpg" alt="" />
-                  <!-- <img src="./styles/s3.webp" alt="" /> -->
                   <p>
                      Такий світильник, ви зможете встановити куди завгодно( шаф, кухонної стільниці, гараж, підвал,
                      комори, сходів та ін.), і Вам зовсім не потрібно буде свердлити стіни – фіксація відбувається за
@@ -133,52 +125,40 @@
             </a>
             <div class="products_count">Залишилося <span class="lastpack">7</span> штук по акції</div>
             <img src="./images/lights-2.jpg" class="thumb" />
-            <!-- <img src="./styles/s4.webp" alt="" /> -->
          </section>
          <section class="s4">
             <h2 class="title">ХАРАКТЕРИСТИКИ</h2>
             <div class="benefits_list3">
                <div class="benefit_item">
                   <img src="./images/dimensions-4.jpg" alt="" />
-                  <!-- <img src="./styles/s5.webp" alt="" /> -->
                   <div class="text_block">
                      <ul>
                         <li><strong>Яскравість: </strong>Висока – 30LM, низька – 10LM</li>
                         <li><strong>Колір світла: </strong>Білий</li>
                         <li><strong>Розмір лампи: </strong>9 x 9 x 2 см</li>
-                        <li><strong>Живлення 1 лампи: </strong>3 батареї AAA </li>
-                        <!-- <li><strong>Живлення пульта: </strong>2 батареї AAA (у комплект не входять)</li> -->
-                        <!-- <li><strong>Розмір пульта: </strong>8 x 6 см</li> -->
+                        <li><strong>Живлення 1 лампи: </strong>3 батареї AAA</li>
                      </ul>
                   </div>
                </div>
 
                <div class="benefit_item">
                   <img src="./images/dimensions-3.jpg" alt="" />
-                  <!-- <img src="./styles/s5.webp" alt="" /> -->
                   <div class="text_block">
                      <ul>
-                        <!-- <li><strong>Яскравість: </strong>Висока – 30LM, низька – 10LM</li> -->
-                        <!-- <li><strong>Колір світла: </strong>Білий</li> -->
-                        <!-- <li><strong>Живлення 1 лампи: </strong>3 батареї AAA (у комплект не входять)</li> -->
                         <li><strong>Живлення пульта: </strong>2 батареї AAA</li>
                         <li><strong>Розмір пульта: </strong>8 x 6 см</li>
-                        <!-- <li><strong>Розмір лампи: </strong>9 x 9 x 2 см</li> -->
                      </ul>
                   </div>
                </div>
 
                <div class="benefit_item">
                   <img src="./images/13-1.jpg" alt="" />
-                  <!-- <img src="./styles/s5.webp" alt="" /> -->
                   <div class="text_block">
                      <ul>
                         <li><strong>Комплектація: </strong></li>
                         <li>LED-світильники - 3шт</li>
                         <li>Пульт керування - 1шт</li>
                         <li>(батареї AAA - <strong>не входять у комплект </strong>)</li>
-                        <!-- <li><strong>Розмір лампи: </strong>9 x 9 x 2 см</li> -->
-                        <!-- <li><strong>Розмір пульта: </strong>8 x 6 см</li> -->
                      </ul>
                   </div>
                </div>
@@ -186,8 +166,8 @@
          </section>
          <section class="description_section s5">
             <div class="img">
-               <img src="./styles/111.jpg" alt="" />
-               <img src="./styles/9.jpg" alt="" />
+               <img src="./images/06-1.jpg" alt="" />
+               <img src="./images/08-1.jpg" alt="" />
             </div>
             <br />
             <a href="index.html#form" class="button">
@@ -205,8 +185,7 @@
             </div>
             <div class="reviews_list4">
                <div class="review_item">
-                  <img style="width: 180px" class="photo" src="./styles/1.jpg" alt="" />
-
+                  <img style="width: 180px" class="photo" src="./images/testimonal-1.webp" alt="" />
                   <div class="text_block">
                      <div class="author_info">Дмитро, 43 роки, Київ</div>
                      <p>
@@ -215,7 +194,7 @@
                   </div>
                </div>
                <div class="review_item">
-                  <img class="photo" style="width: 320px" src="./styles/2.jpg" alt="" />
+                  <img class="photo" style="width: 320px" src="./images/testimonal-2.webp" alt="" />
                   <div class="text_block">
                      <div class="author_info">Ірина, 35 років, Житомир</div>
                      <p>
@@ -225,7 +204,7 @@
                   </div>
                </div>
                <div class="review_item">
-                  <img class="photo" style="width: 180px" src="./styles/3.jpg" alt="" />
+                  <img class="photo" style="width: 195px" src="./images/13-1.jpg" alt="" />
                   <div class="text_block">
                      <div class="author_info">Катерина, 29 років, Житомир</div>
                      <p>
@@ -245,21 +224,21 @@
             <h2 class="title">Доставка і оплата</h2>
             <div class="order_info_list2">
                <div class="info_item">
-                  <img src="./styles/order_info2__delivery_image.jpg" alt="" />
+                  <img src="./images/доставка/images.jpg" alt="" />
                   <div class="text_block">
                      <h4>Доставка</h4>
                      <p>Новою Поштою протягом 1-3 днів.</p>
                   </div>
                </div>
                <div class="info_item">
-                  <img src="./styles/order_info2__payment_image.jpg" alt="" />
+                  <img src="./images/оплата/oplata-img.png" alt="" />
                   <div class="text_block">
                      <h4>Оплата</h4>
                      <p>Оплата замовлень здійснюється тільки за фактом отримання товару в поштовому відділенні</p>
                   </div>
                </div>
                <div class="info_item">
-                  <img src="./styles/order_info2__guarantee_image.jpg" alt="" />
+                  <img src="./images/гарантія/garantiya.png" alt="" />
                   <div class="text_block">
                      <h4>Гарантії</h4>
                      <p>Ми завжди перевіряємо товар перед відправкою і гарантуємо 100% якість</p>
@@ -274,7 +253,7 @@
             </div>
 
             <div class="image_block">
-               <img class="offer_image" src="./styles/offer__image.webp" alt="" />
+               <img class="offer_image" src="./images/coulage-5.jpg" alt="" />
                <div class="discount_block">
                   <div class="value">30%</div>
                   <div class="text">знижка</div>
@@ -303,9 +282,6 @@
             </div>
             <p class="limited">Залиште заявку та наш менеджер зателефонує Вам для уточнення деталей замовлення</p>
             <form id="form" class="order_form">
-               <!-- action="https://svet.skripz.com.ua/zakaz.php" -->
-               <!-- method="post" -->
-               <!-- onsubmit="if(!this.name.value){alert(&#39;Введіть ваше ім\&#39;я!&#39;);return false}if(!this.phone.value){alert(&#39;Введіть Ваш номер телефону!&#39;);return false}return true;" -->
                <input type="hidden" name="sendemail" value="yes" /><input type="hidden" name="redirect" value="yes" />
 
                <input class="field" type="text" name="name" placeholder="Введіть ваше ім&#39;я" required="" />
@@ -316,7 +292,7 @@
                   <span>Оформити замовлення</span>
                </button>
             </form>
-            <!-- <div class="products_count">Другий набір за<span class="lastpack">249 грн</span></div> -->
+            <div class="products_count">Другий набір за<span class="lastpack">249 грн</span></div>
          </section>
          <footer class="footer_section">
             <!-- <div style="text-align: center">
