moderate styles and images

--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -19,10 +19,10 @@
       <div id="top" class="main_wrapper">
          <a href="#top" class="top-btn" title="вгору">↑</a>
          <header class="offer_section offer3">
-            <div class="title_block black">
-               <h2 class="main_title">Black Out</h2>
-               <p class="subtitle">готуємося до Black Out і сподіваємося що його не буде</p>
-            </div>
+            <!-- <div class="title_block black"> -->
+            <!-- <h2 class="main_title">Black Out</h2> -->
+            <!-- <p class="subtitle">готуємося до Black Out і сподіваємося що його не буде</p> -->
+            <!-- </div> -->
 
             <div class="title_block">
                <h1 class="main_title">Набір із трьох LED світильників</h1>
@@ -30,7 +30,7 @@
             </div>
 
             <div class="image_block">
-               <img class="offer_image" src="./images/lights-3-1.jpg" alt="" />
+               <img class="offer_image" src="./images/lights-3-1.jpg" alt="точкові led світильники в кухні" />
                <div class="discount_block">
                   <div class="value">30%</div>
                   <div class="text">знижка</div>
@@ -77,12 +77,12 @@
                <div class="benefit_item">
                   <h2>ВСТАНОВЛЕННЯ ТАЙМЕРУ ТА НАЛАШТУВАННЯ ЯСКРАВОСТІ ЗА ДОПОМОГОЮ ПУЛЬТА</h2>
 
-                  <img src="./images/lights-1.jpg" alt="" />
+                  <img src="./images/lights-1.jpg" alt="low and hight lights" />
                   <p>Він оснащений дистанційним керуванням, регулятором яскравості та 30-хвилинним таймером.</p>
                </div>
                <div class="benefit_item">
                   <h2>УЛЬТРА ЯСКРАВІ ЛАМПИ ЯКІ ПРАЦЮЮТЬ ВІД БАТАРЕЙОК</h2>
-                  <img class="offer_image" src="./images/04.webp" alt="" />
+                  <img class="offer_image" src="./images/04.webp" alt="lamp body" />
                   <p>
                      Живлення яким здійснюється за рахунок батарей ААА. Ви зможете включати його незалежно від електрики
                      міської мереж
@@ -90,7 +90,7 @@
                </div>
                <div class="benefit_item">
                   <h2>ПІДХОДИТЬ ДЛЯ ОСВІТЛЕННЯ БУДЬ ЧОГО</h2>
-                  <img src="./images/coulage-1.jpg" alt="" />
+                  <img src="./images/coulage-1.jpg" alt="led lights coulage" />
                   <p>
                      Такий світильник, ви зможете встановити куди завгодно( шаф, кухонної стільниці, гараж, підвал,
                      комори, сходів та ін.), і Вам зовсім не потрібно буде свердлити стіни – фіксація відбувається за
@@ -103,6 +103,14 @@
             <h2 class="title"><span>Подивіться як це просто</span></h2>
             <div class="video_block">
                <div class="youtube" id="YTLWfE-k_Fc">
+                  <video
+                     controls
+                     muted
+                     preload="auto"
+                     class="video"
+                     src="./images/video-1.mp4"
+                     poster="./images/poster.jpg"
+                  ></video>
                   <!-- <img src="./images/lights-2.jpg" class="thumb" /> -->
                   <!-- <img src="./styles/hqdefault.jpg" class="thumb" /> -->
                   <div class="play"></div>
@@ -130,7 +138,7 @@
             <h2 class="title">ХАРАКТЕРИСТИКИ</h2>
             <div class="benefits_list3">
                <div class="benefit_item">
-                  <img src="./images/dimensions-4.jpg" alt="" />
+                  <img src="./images/dimensions-4.jpg" alt="light front and in profile" />
                   <div class="text_block">
                      <ul>
                         <li><strong>Яскравість: </strong>Висока – 30LM, низька – 10LM</li>
@@ -142,7 +150,7 @@
                </div>
 
                <div class="benefit_item">
-                  <img src="./images/dimensions-3.jpg" alt="" />
+                  <img src="./images/dimensions-3.jpg" alt="lights dimensions" />
                   <div class="text_block">
                      <ul>
                         <li><strong>Живлення пульта: </strong>2 батареї AAA</li>
@@ -152,7 +160,7 @@
                </div>
 
                <div class="benefit_item">
-                  <img src="./images/13-1.jpg" alt="" />
+                  <img src="./images/13-1.jpg" alt="package with set of lights" />
                   <div class="text_block">
                      <ul>
                         <li><strong>Комплектація: </strong></li>
@@ -166,8 +174,8 @@
          </section>
          <section class="description_section s5">
             <div class="img">
-               <img src="./images/06-1.jpg" alt="" />
-               <img src="./images/08-1.jpg" alt="" />
+               <img src="./images/06-1.jpg" alt="light in hand" />
+               <img src="./images/08-1.jpg" alt="light and remote controller" />
             </div>
             <br />
             <a href="index.html#form" class="button">
@@ -185,7 +193,12 @@
             </div>
             <div class="reviews_list4">
                <div class="review_item">
-                  <img style="width: 180px" class="photo" src="./images/testimonal-1.webp" alt="" />
+                  <img
+                     style="width: 180px"
+                     class="photo"
+                     src="./images/testimonal-1.webp"
+                     alt="lights at night in a dark"
+                  />
                   <div class="text_block">
                      <div class="author_info">Дмитро, 43 роки, Київ</div>
                      <p>
@@ -194,7 +207,7 @@
                   </div>
                </div>
                <div class="review_item">
-                  <img class="photo" style="width: 320px" src="./images/testimonal-2.webp" alt="" />
+                  <img class="photo" style="width: 320px" src="./images/testimonal-2.webp" alt="lights in a kitchen" />
                   <div class="text_block">
                      <div class="author_info">Ірина, 35 років, Житомир</div>
                      <p>
@@ -204,7 +217,7 @@
                   </div>
                </div>
                <div class="review_item">
-                  <img class="photo" style="width: 195px" src="./images/13-1.jpg" alt="" />
+                  <img class="photo" style="width: 195px" src="./images/13-1.jpg" alt="pachage with led lights of 3" />
                   <div class="text_block">
                      <div class="author_info">Катерина, 29 років, Житомир</div>
                      <p>
@@ -224,21 +237,21 @@
             <h2 class="title">Доставка і оплата</h2>
             <div class="order_info_list2">
                <div class="info_item">
-                  <img src="./images/доставка/images.jpg" alt="" />
+                  <img src="./images/доставка/images.jpg" alt="delivery car and man with box" />
                   <div class="text_block">
                      <h4>Доставка</h4>
                      <p>Новою Поштою протягом 1-3 днів.</p>
                   </div>
                </div>
                <div class="info_item">
-                  <img src="./images/оплата/oplata-img.png" alt="" />
+                  <img src="./images/оплата/oplata-img.png" alt="wallet and cash" />
                   <div class="text_block">
                      <h4>Оплата</h4>
                      <p>Оплата замовлень здійснюється тільки за фактом отримання товару в поштовому відділенні</p>
                   </div>
                </div>
                <div class="info_item">
-                  <img src="./images/гарантія/garantiya.png" alt="" />
+                  <img src="./images/гарантія/garantiya.png" alt="garanty label" />
                   <div class="text_block">
                      <h4>Гарантії</h4>
                      <p>Ми завжди перевіряємо товар перед відправкою і гарантуємо 100% якість</p>
@@ -247,13 +260,22 @@
             </div>
          </section>
          <section class="offer_section offer3">
+            <!-- <div class="title_block black">
+               <h1 class="main_title">Будь готовим до BlackOut</h1>
+               <p class="subtitle">зі сподіванням що орки обломляться</p>
+               <p class="subtitle">5% з продажУ кожного LED підуть на потреби ЗСУ </p>
+            </div> -->
+            <!-- <img class="offer_image" src="./images/coulage-5.jpg" alt="coulage of lights" /> -->
+            <!-- <img class="offer_image" src="./images/02.webp" alt="набір світильників світлодіодних 3 шт" /> -->
+
             <div class="title_block">
                <h1 class="main_title">Набір із трьох LED світильників</h1>
                <p class="subtitle">З пультом, на батарейках</p>
             </div>
 
             <div class="image_block">
-               <img class="offer_image" src="./images/coulage-5.jpg" alt="" />
+               <img class="offer_image" src="./images/coulage-5.jpg" alt="coulage of lights" />
+
                <div class="discount_block">
                   <div class="value">30%</div>
                   <div class="text">знижка</div>
