--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -19,11 +19,6 @@
       <div id="top" class="main_wrapper">
          <a href="#top" class="top-btn" title="вгору">↑</a>
          <header class="offer_section offer3">
-            <!-- <div class="title_block black"> -->
-            <!-- <h2 class="main_title">Black Out</h2> -->
-            <!-- <p class="subtitle">готуємося до Black Out і сподіваємося що його не буде</p> -->
-            <!-- </div> -->
-
             <div class="title_block">
                <h1 class="main_title">Набір із трьох LED світильників</h1>
                <p class="subtitle">З пультом, на батарейках</p>
@@ -110,8 +105,6 @@
                      src="./images/video-1.mp4"
                      poster="./images/poster.jpg"
                   ></video>
-                  <!-- <img src="./images/lights-2.jpg" class="thumb" /> -->
-                  <!-- <img src="./styles/hqdefault.jpg" class="thumb" /> -->
                   <div class="play"></div>
                </div>
             </div>
@@ -262,10 +255,10 @@
             <!-- <div class="title_block black">
                <h1 class="main_title">Будь готовим до BlackOut</h1>
                <p class="subtitle">зі сподіванням що орки обломляться</p>
-               <p class="subtitle">5% з продажУ кожного LED підуть на потреби ЗСУ </p>
-            </div> -->
-            <!-- <img class="offer_image" src="./images/coulage-5.jpg" alt="coulage of lights" /> -->
-            <!-- <img class="offer_image" src="./images/02.webp" alt="набір світильників світлодіодних 3 шт" /> -->
+               <p class="subtitle">5% з продажУ кожного LED підуть на потреби ЗСУ</p>
+            </div>
+            <img class="offer_image" src="./images/coulage-5.jpg" alt="coulage of lights" />
+            <img class="offer_image" src="./images/02.webp" alt="набір світильників світлодіодних 3 шт" /> -->
 
             <div class="title_block">
                <h1 class="main_title">Набір із трьох LED світильників</h1>
