moderate img, icons, styles

--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -37,6 +37,7 @@
                <div class="benefit_item">Обмежена пропозиція</div>
                <div class="benefit_item">Оплата при отриманні</div>
             </div>
+
             <div class="price_block clearfix">
                <div class="price_item old">
                   <div class="text">Звичайна ціна:</div>
@@ -298,7 +299,7 @@
             <form id="form" class="order_form">
                <input type="hidden" name="sendemail" value="yes" /><input type="hidden" name="redirect" value="yes" />
 
-               <input class="field" type="text" name="name" placeholder="Введіть ваше ім&#39;я" required="" />
+               <input class="field" type="text" name="name" placeholder="Введіть Ваше ім&#39;я" required="" />
                <input class="field" type="text" name="phone" id="phone" placeholder="Введіть Ваш телефон" required="" />
 
                <button class="button">
